updated the members

--- a/index.html
+++ b/index.html
@@ -116,6 +116,95 @@
           </div>
         </div>
       </div>
+      <div class="suria">
+        <div class="card">
+          <div class="currentBox">
+            <a href="./suria.html">
+              <div class="left">
+                <img class="avatar" src="./avatars/suria.jpg" alt="" />
+              </div>
+            </a>
+            <div class="right">
+              <div class="subject">
+                <div class="subName"></div>
+              </div>
+              <div class="timeloc">
+                <i class="fa-regular fa-clock"></i>
+                <div class="time"></div>
+                ~
+                <div class="location"></div>
+                <i class="fa-solid fa-location-crosshairs"></i>
+              </div>
+            </div>
+          </div>
+          <div class="middle">
+            <table></table>
+          </div>
+          <div class="bottom">
+            <i class="fa-solid fa-chevron-down"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="chandrahaas">
+        <div class="card">
+          <div class="currentBox">
+            <a href="./chandrahaas.html">
+              <div class="left">
+                <img class="avatar" src="./avatars/chandrahaas.jpg" alt="" />
+              </div>
+            </a>
+            <div class="right">
+              <div class="subject">
+                <div class="subName"></div>
+              </div>
+              <div class="timeloc">
+                <i class="fa-regular fa-clock"></i>
+                <div class="time"></div>
+                ~
+                <div class="location"></div>
+                <i class="fa-solid fa-location-crosshairs"></i>
+              </div>
+            </div>
+          </div>
+          <div class="middle">
+            <table></table>
+          </div>
+          <div class="bottom">
+            <i class="fa-solid fa-chevron-down"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="shreyan">
+        <div class="card">
+          <div class="currentBox">
+            <a href="./shreyan.html">
+              <div class="left">
+                <img class="avatar" src="./avatars/shreyan.jpg" alt="" />
+              </div>
+            </a>
+            <div class="right">
+              <div class="subject">
+                <div class="subName"></div>
+              </div>
+              <div class="timeloc">
+                <i class="fa-regular fa-clock"></i>
+                <div class="time"></div>
+                ~
+                <div class="location"></div>
+                <i class="fa-solid fa-location-crosshairs"></i>
+              </div>
+            </div>
+          </div>
+          <div class="middle">
+            <table></table>
+          </div>
+          <div class="bottom">
+            <i class="fa-solid fa-chevron-down"></i>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="./index.js"></script>
